v1.0.2 chrome port and fixes
move fetch calls from content.js to background.js
as chrome extension cross origin request cannot be in content scripts
attempt fix filetree toggler not showing up sometimes
change css to use icons from absolute url
because chrome and firefox uses different relative url path

--- a/src/custom.css
+++ b/src/custom.css
@@ -9,3 +9,6 @@ label[for="filetree-toggler"] {
   margin-bottom: 0;
   margin-right: 20px;
 }
+#filetree:empty::before {
+  content: "Loading filetree...";
+}
